# llama.cpp-omni

./: .gitignore  CMakeLists.txt  modify.md  代码阅读.md
apps/: .gitignore  requirements.txt  start.sh
apps/assets/: model_registry.json
apps/desktop/: launcher.py  menubar_app.py
apps/desktop/packaging/macos/: Comni.icns  Info.plist  launcher_wrapper.sh
apps/frontend/: index.html  turnbased.html
apps/frontend/audio-duplex/: audio_duplex.html
apps/frontend/duplex/: duplex-shared.css
apps/frontend/duplex/lib/: duplex-session.js
apps/frontend/half-duplex/: half_duplex.html
apps/frontend/omni/: omni-app.js  omni.html
apps/server/: config.example.json  config.py  gateway.py  model_hub.py  start_all.sh  worker.py
apps/server/core/processors/: cpp_backend.py
apps/server/gateway_modules/: worker_pool.py
apps/server/vad/: vad.py
apps/tests/: bench_duplex_app.py  test_full_service.py
common/: common.h
ggml/include/: ggml-cuda.h
ggml/src/ggml-cuda/: common.cuh  ggml-cuda.cu  marlin-op.cu  marlin.cu
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-hparams.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-model.cpp  llama-model.h
tests/: test-marlin-w4a16.cpp
tools/: CMakeLists.txt
tools/omni/: CMakeLists.txt  audition.cpp  inspect_awq_ffn_down.py  omni-cli.cpp  omni.cpp  omni.h  tts_backend.h  tts_backend_legacy.cpp  tts_backend_voxcpm.cpp  vision.cpp
tools/omni/test/: test-duplex.cpp
tools/omni/token2wav/: token2wav-impl.cpp  token2wav-impl.h
tools/server/: CMakeLists.txt  server-context.cpp  server-context.h  server.cpp
